# notchai

./: README.md  index.html  package-lock.json  package.json
lome/: package-lock.json  package.json
lome/src/: App.css  App.tsx
lome/src-tauri/: Cargo.toml  tauri.conf.json
lome/src-tauri/src/: main.rs  scanner.rs
lome/src/components/: CollapsedView.tsx  DetailView.tsx  ExpandedView.tsx  StatusDot.tsx
resources/: notchai-codex-notify.sh  notchai-hook.py
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: adapter.rs  event_bus.rs  hook_installer.rs  hook_models.rs  hook_server.rs  lib.rs  main.rs  models.rs  monitor.rs  notch.rs  otel_server.rs  process.rs  scanner.rs  transcript.rs  util.rs
src-tauri/src/adapters/: claude.rs  codex.rs  cursor.rs  gemini.rs
src/components/: AgentRow.tsx  Badge.tsx  BadgeBar.tsx  BadgeGroup.tsx  CollapsedView.tsx  CommandBlock.tsx  ExpandedView.tsx  NotchArc.tsx  QuestionCard.tsx  SettingsView.tsx  ShellApprovalCard.tsx  StatusDot.tsx  StatusRing.tsx  ToolApproval.tsx  ToolCallFeed.tsx
src/hooks/: useAgentMonitor.ts  useEventBus.ts  useHookEvents.ts  useSessionNotifications.ts  useSessionToolCalls.ts
src/lib/: badgeSort.ts  pricing.ts  shellParse.test.ts  shellParse.ts  summarize.ts
src/types/: hooks.ts
tasks/: prd.json  progress.txt
