[package]
name = "notchai"
version = "0.1.0"
description = "Notch-based agent monitor for macOS"
authors = ["Trevor Stenson"]
edition = "2021"

[lib]
name = "notchai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["net", "io-util", "sync", "macros", "rt-multi-thread"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
