[package]
name = "lome"
version = "0.1.0"
description = "Notch-based agent monitor for macOS"
authors = ["Trevor Stenson"]
edition = "2021"

[lib]
name = "lome_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
